# mandelrust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: mandelbenches.rs
color-space/: Cargo.toml
color-space/benches/: colorbenches.rs
color-space/src/: lib.rs  linear_rgb.rs  pixel.rs  supported_color_type.rs
examples/: mandelbrot_set.avif  mandelbrot_set_at_re_-0.2345_im_-0.7178_zoom_12.5_maxiters_1000.avif  mandelbrot_set_at_re_-0.23_im_-0.72_zoom_6.4_maxiters_255.avif  mandelbrot_set_at_re_-0.728_im_-0.212_zoom_6.4_maxiters_1000.avif  mandelbrot_set_at_re_-1.7476538606317_im_0.001970760613125_zoom_17.4401_maxiters_12500.avif  mandelbrot_set_gray.avif  no_ssaa.avif  ssaa.avif
examples/smoothing/: mandelbrot_set_ssaa_region.avif  no_smoothing_abs_geq_2.avif  no_smoothing_abs_geq_6.avif  smoothing_abs_geq_2.avif  smoothing_abs_geq_6.avif  smoothing_abs_geq_6_ssaa.avif
mandelbrot/: Cargo.toml
mandelbrot/benches/: mandelbenches.rs
mandelbrot/src/: command_line_interface.rs  lib.rs  main.rs  resolution.rs
mandellib/: Cargo.toml
mandellib/benches/: mandelbenches.rs
mandellib/src/: lib.rs  u32_and_usize.rs
mandelview/: Cargo.toml
mandelview/src/: embedded_resources.rs  main.rs
mandelviewer/: Cargo.toml
mandelviewer/src/: command_line_interface.rs  embedded_resources.rs  main.rs  re_rendering_viewer.rs
src/: cmap.py  color_space.rs  command_line_interface.rs  config.rs  lib.rs  main.rs  mandelbrot.rs  structs.rs
