[workspace]
members = [
    "color-space",
    "mandellib",
    "mandelbrot",
    "mandelviewer",
]
resolver = "2"

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[profile.dev.package."*"]
# Enable optimization of dependencies also in debug mode
opt-level=3