[workspace]
members = [
    "color-space",
    "mandellib",
    "mandelbrot",
    "mandelviewer",
]
resolver = "2"

[profile.release-lto]
inherits = "release"
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"
strip = "symbols"
debug = "none"
debug-assertions = false
overflow-checks = false
panic = "abort"

[profile.dev.package."*"]
# Enable optimization of dependencies also in debug mode
opt-level=3
