[package]
name = "color-space"
version = "0.3.1"
edition = "2021"

[dependencies]
image = {version = "0.25", default-features = false, features = ["png"]}

[dev-dependencies]
approx = "0.5"
itertools = "0.12"
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "colorbenches"
harness = false
