[package]
name = "mandelbrot"
version = "8.0.4"
authors = ["Johanna Sörngård (jsorngard@gmail.com)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mandellib = {path = "../mandellib"}
rayon = "1.8.0"
color-space = {path = "../color-space"}
clap = { version = "4.4", features = ["derive"] }
image = {version = "0.24", default-features = false, features = ["png"] }
oxipng = {version = "9.0", default-features = false, features = ["parallel", "zopfli"], optional = true }

[features]
oxipng = ["dep:oxipng"]
coz = ["mandellib/coz"]
