[package]
name = "mandelbrot"
version = "8.0.4"
authors = ["Johanna Sörngård (jsorngard@gmail.com)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mandellib = {path = "../mandellib"}
rayon = "1.10"
color-space = {path = "../color-space"}
clap = { version = "4.5", features = ["derive"] }
image = {version = "0.25", default-features = false, features = ["png"] }

[features]
# Additional file format support
jpg = ["image/jpeg"]
bmp = ["image/bmp"]
qoi = ["image/qoi"]
webp = ["image/webp"]
tiff = ["image/tiff"]
gif = ["image/gif"]
ico = ["image/ico"]
## Adds support for ppm and pam
pnm = ["image/pnm"]
tga = ["image/tga"]
