[package]
name = "mandellib"
version = "12.0.0"
edition = "2021"

[dependencies]
color-space = {path = "../color-space"}
image = {version = "0.24", default-features = false, features = ["png"]}
rayon = "1.8"
indicatif = { version = "0.17", features = ["rayon"] }
itertools = {version = "0.12", default_features = false}

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "mandelbenches"
harness = false
