[package]
name = "mandellib"
version = "12.0.0"
edition = "2021"

[dependencies]
color-space = { path = "../color-space" }
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1.11"
indicatif = { version = "0.18", features = ["rayon"] }
itertools = { version = "0.14", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "mandelbenches"
harness = false
