[package]
name = "mandelview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mandellib = {path = "../mandellib"}
iced = "0.6"
image = {version = "0.24", default-features = false, features = ["png"]}