[package]
name = "mandelviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mandellib = {path = "../mandellib"}
color-space = {path = "../color-space"}
clap = {version = "4.4", features = ["derive"]}
iced = {version = "0.10", features = ["image"]}
image = "0.24"
rayon = "1.8"
rfd = "0.12"
nonzero_ext = "0.3.0"

[features]
# Enable this feature to show extra debug information in the render window when pressing F12.
debug = ["iced/debug"]