[package]
name = "mandelviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mandellib = { path = "../mandellib" }
color-space = { path = "../color-space" }
clap = { version = "4.5", features = ["derive"] }
iced = { version = "0.10", features = ["image"] }
image = "0.25"
rayon = "1.11"
rfd = "0.16"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.48"

[features]
# Enable this feature to show extra debug information in the render window when pressing F12.
debug = ["iced/debug"]
